--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Un lugar donde las
+    personas que conocemos la verdad podemos reunirnos para hablar de los planes de los
+    entes superiores que manipulan al rebaño">
+    <meta name="author" content="Gabriel Hernández Collado">
+    <link rel="stylesheet" href="style.css">
     <title>terraPLANISTA</title>
 </head>
 <body>
-    
+    <header>
+        <h1>terra<span id="logo">PLANISTA</span></h1>
+        <nav>
+            <ul>
+                <li>Verdades</li>
+                <li>Redes</li>
+                <li>Ayuda</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <ul id="lista-imagenes">
+                <li><img src="img/img1.jpg" alt=""></li>
+                <li><img src="img/img2.jpg" alt=""></li>
+                <li><img src="img/img3.jpg" alt=""></li>
+                <li><img src="img/img4.jpg" alt=""></li>
+            </ul>
+        </section>
+        <section>
+            <h2></h2>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
